// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests items render empty 1`] = `
<MovieItem
  genres={null}
  poster_path={null}
  release_date={null}
  title={null}
>
  <div
    className="movieItem"
  >
    <div
      className="movieItem__img"
      style={
        Object {
          "backgroundImage": "url(null)",
        }
      }
    />
    <div
      className="movieItem__info"
    >
      <div>
        <h3
          className="movieItem__title"
        />
        <h4
          className="movieItem__genre"
        />
      </div>
      <span
        className="movieItem__year"
      />
    </div>
  </div>
</MovieItem>
`;

exports[`tests items render with dates 1`] = `
<MovieItem
  genres={
    Array [
      "Comedy",
      "Drama",
      "Romance",
    ]
  }
  id={19404}
  overview="Raj is a rich, carefree, happy-go-lucky second generation NRI. Simran is the daughter of Chaudhary Baldev Singh, who in spite of being an NRI is very strict about adherence to Indian values. Simran has left for India to be married to her childhood fiancé. Raj leaves for India with a mission at his hands, to claim his lady love under the noses of her whole family. Thus begins a saga."
  poster_path="https://image.tmdb.org/t/p/w500/uC6TTUhPpQCmgldGyYveKRAu8JN.jpg"
  release_date="1995-10-20"
  runtime={190}
  tagline="Come... Fall in Love"
  title="Dilwale Dulhania Le Jayenge"
  vote_average={9.2}
  vote_count={1297}
>
  <div
    className="movieItem"
  >
    <div
      className="movieItem__img"
      style={
        Object {
          "backgroundImage": "url(https://image.tmdb.org/t/p/w500/uC6TTUhPpQCmgldGyYveKRAu8JN.jpg)",
        }
      }
    />
    <div
      className="movieItem__info"
    >
      <div>
        <h3
          className="movieItem__title"
        >
          Dilwale Dulhania Le Jayenge
        </h3>
        <h4
          className="movieItem__genre"
        >
          <span
            key="Comedy"
          >
            Comedy
             
          </span>
          <span
            key="Drama"
          >
            Drama
             
          </span>
          <span
            key="Romance"
          >
            Romance
             
          </span>
        </h4>
      </div>
      <span
        className="movieItem__year"
      >
        1995
      </span>
    </div>
  </div>
</MovieItem>
`;
